feat: Add feature to predict sentiment on listed review

--- a/src/templates/sentiment.html
+++ b/src/templates/sentiment.html
@@ -9,7 +9,7 @@
 
     <form action="/sentiment/predict" method="post">
         <label for="review">Enter your sentence:</label><br>
-        <textarea name="review" required></textarea><br>
+        <textarea name="review" rows="6" cols="70" required></textarea><br>
         <input type="submit" value="Analyze">
     </form>
 
